[package]
name = "blink"
version = "0.1.0"
authors = ["Paul Brinkmeier <paul.brinkmeier@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.6.4"
cortex-m-semihosting = "0.3.0"
alloc-cortex-m = "0.3.4"
spin = "0.4.8"
bitflags = "1.0.3"
volatile = "0.2.4"
bit_field = "0.9.0"
bare-metal = "0.2.3"
embedded-hal = "0.2.1"
pin-utils = "0.1.0-alpha"

[dependencies.stm32f7]
version = "0.3.2"
features = ["stm32f7x6", "rt"]

[dependencies.arrayvec]
version = "0.4.7"
default-features = false

[dependencies.byteorder]
version = "1.0"
default-features = false

[dependencies.smoltcp]
#version = "0.5.0"
git = "https://github.com/astro/smoltcp.git"
branch = "dhcp"
default-features = false
features = ["alloc", "socket-raw", "socket-udp", "socket-tcp", "socket-icmp", "proto-ipv4", "proto-dhcpv4"]

[patch.crates-io.cortex-m-rt]
git = "https://github.com/rust-embedded/cortex-m-rt.git"

[dependencies.stm32f7-discovery]
git = "https://github.com/embed-rs/stm32f7-discovery.git"

[dependencies.futures-preview]
git = "https://github.com/rust-lang-nursery/futures-rs.git"
default-features = false
features = ["alloc", "nightly"]

[profile.release]
lto = true
